CXBOX-768 Description PickListPopup.