@@ -67,7 +67,7 @@ public class MyExample3191Meta extends FieldMetaBuilder<MyExample3191DTO> {
         fields.enableFilter(MyExample3191DTO_.customFieldRadio);
         fields.setConcreteFilterValues(MyExample3191DTO_.customFieldMultipleSelect, Arrays.stream(CustomFieldMultipleSelectEnum.values())
                 .map(en -> new SimpleDictionary(en.name(), en.getValue()))
-                .collect(Collectors.toList()));
+                .toList());
         fields.enableFilter(MyExample3191DTO_.customFieldMultipleSelect);
         fields.enableFilter(MyExample3191DTO_.customFieldMultivalue);
         fields.enableFilter(MyExample3191DTO_.customFieldMultivalueHoverDisplayedKey);
