@@ -62,7 +62,7 @@ public class MyExample3175Meta extends FieldMetaBuilder<MyExample3175DTO> {
         fields.enableFilter(MyExample3175DTO_.customFieldRadio);
         fields.setConcreteFilterValues(MyExample3175DTO_.customFieldMultipleSelect, Arrays.stream(CustomFieldMultipleSelectEnum.values())
                 .map(en -> new SimpleDictionary(en.name(), en.getValue()))
-                .collect(Collectors.toList()));
+                .toList());
         fields.enableFilter(MyExample3175DTO_.customFieldMultipleSelect);
         fields.enableFilter(MyExample3175DTO_.customFieldMultivalue);
         fields.enableFilter(MyExample3175DTO_.customFieldMultivalueHover);
