@@ -60,7 +60,7 @@ public class MyExample3614Service extends VersionAwareResponseService<MyExample3
                     .filter(Objects::nonNull)
                     .map(Long::parseLong)
                     .map(e -> entityManager.getReference(MyEntity3625.class, e))
-                    .collect(Collectors.toList()));
+                    .toList());
         }
         if (data.isFieldChanged(MyExample3614DTO_.address)) {
             entity.setAddress(data.getAddress());
